# SoundSplitter

./: .gitignore  README.md  RELEASING.md  build-installer.ps1  desktop.ps1  latest.json.template  run.ps1  setup.ps1  sound-splitter-cuda.iss  sound-splitter.iss
backend/: .env.example  poc_artic.py  poc_chords.py  poc_split_guitar.py  poc_tab.py  poc_transcribe.py  poc_transcribe_bp.py  requirements.txt  run.py  seed_demo.py  smoke_separate.py  test_pipeline.py
backend/app/: capture.py  config.py  db.py  drumgrid.py  encoder.py  jobs.py  library.py  main.py  separator.py  spectrogram.py  spotify.py  tabgen.py  tabsync.py  wiki_content.py
backend/tests/: test_tabsync_guides.py  test_tabsync_sounding.py  test_tabsync_tempo.py
design/: README.txt  logo-brief.md
frontend/: angular.json  package-lock.json  package.json
frontend/public/: alphaTab.core.mjs
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.routes.ts  app.ts
frontend/src/app/pages/capture/: capture.css  capture.html  capture.ts
frontend/src/app/pages/player/: player.css  player.html  player.ts  stem-waveform.ts
frontend/src/app/pages/practice/: practice.css  practice.html  practice.ts
frontend/src/app/pages/tabs/: tabs.css  tabs.html  (+1 more)
frontend/src/app/services/: api.ts  multitrack-player.ts  practice-audio.ts
frontend/src/app/theory/: chord-shapes.ts  chords.ts  fretboard.ts  keys.ts  notes.ts  progressions.ts  scales.ts  tunings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/splash/: index.html
src-tauri/src/: lib.rs  main.rs
(+6 files in other folders)
