[package]
name = "sound-splitter"
version = "0.1.0"
description = "Sound Splitter desktop shell"
authors = ["Cas"]
edition = "2021"
rust-version = "1.77"

# The library the binary links against (Tauri's recommended layout).
[lib]
name = "sound_splitter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
