[package]
name = "sound-splitter"
version = "0.1.0"
description = "SoundSplitter desktop shell"
authors = ["Cas"]
edition = "2021"
rust-version = "1.77"

# The library the binary links against (Tauri's recommended layout).
[lib]
name = "sound_splitter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Custom auto-update (the payload is >2GB, so we ship an Inno Setup installer that
# NSIS/MSI can't build; the Tauri updater plugin only drives NSIS/MSI). We fetch a
# static latest.json over HTTPS, verify a minisign signature against an embedded
# pubkey, then run the downloaded installer. ureq = small blocking HTTP+TLS client.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
minisign-verify = "0.2"
base64 = "0.22"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
